@@ -1,7 +1,6 @@
 package com.victor.service;
 
 import com.victor.dto.TransacaoDTO;
-import com.victor.dto.TransacaoPageDTO;
 import com.victor.dto.mapper.TransacaoMapper;
 import com.victor.enums.TipoCarteira;
 import com.victor.enums.TipoTransacao;
@@ -9,14 +8,10 @@ import com.victor.exception.RecordNotFoundException;
 import com.victor.model.Transacao;
 import com.victor.repository.TransacaoRepository;
 import jakarta.validation.Valid;
-import jakarta.validation.constraints.Max;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Positive;
-import jakarta.validation.constraints.PositiveOrZero;
 import org.hibernate.validator.constraints.Length;
 import org.jspecify.annotations.Nullable;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
@@ -25,7 +20,6 @@ import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Validated
 @Service
@@ -52,18 +46,14 @@ public class TransacaoService {
     }
 
     // Read
-    public TransacaoPageDTO listarTransacoes(@NotNull TipoTransacao tipoTransacao, @PositiveOrZero int pagina, @Positive @Max(100) int itensPorPagina, @NotNull @Length(min = 6, max = 6) String mesAno, @Nullable Integer idCarteira, @Nullable Integer idCategoria) throws ParseException {
+    public List<TransacaoDTO> listarTransacoes(@NotNull TipoTransacao tipoTransacao, @NotNull @Length(min = 6, max = 6) String mesAno, @Nullable Integer idCarteira, @Nullable Integer idCategoria) throws ParseException {
         UUID idUsuario = usuarioService.getUsuarioLogado().getId();
-        PageRequest pageRequest = PageRequest.of(pagina, itensPorPagina);
-        Page<Transacao> pageTransacoes;
-        switch (tipoTransacao) {
+        return switch (tipoTransacao) {
             case ENTRADA ->
-                    pageTransacoes = getTransacoesEntrada(mesAno, idUsuario, pageRequest, idCarteira, idCategoria);
-            case SAIDA -> pageTransacoes = getTransacoesSaida(mesAno, idUsuario, pageRequest, idCarteira, idCategoria);
-            default -> throw new RuntimeException("Tipo de transação inválido");
-        }
-        List<TransacaoDTO> transacoes = pageTransacoes.get().map(TransacaoMapper::toDTO).collect(Collectors.toList());
-        return new TransacaoPageDTO(transacoes, pageTransacoes.getNumberOfElements(), pageTransacoes.getTotalPages());
+                    getTransacoesEntrada(mesAno, idUsuario, idCarteira, idCategoria).stream().map(TransacaoMapper::toDTO).toList();
+            case SAIDA ->
+                    getTransacoesSaida(mesAno, idUsuario, idCarteira, idCategoria).stream().map(TransacaoMapper::toDTO).toList();
+        };
     }
 
     // Update
@@ -85,34 +75,34 @@ public class TransacaoService {
         transacaoRepository.delete(transacaoRepository.findById(id).orElseThrow(() -> new RecordNotFoundException(id)));
     }
 
-    private Page<Transacao> getTransacoesEntrada(@NotNull @Length(min = 6, max = 6) String mesAno, @NotNull UUID idUsuario, @NotNull PageRequest pageRequest, @Nullable Integer idCarteira, @Nullable Integer idCategoria) throws ParseException {
+    private List<Transacao> getTransacoesEntrada(@NotNull @Length(min = 6, max = 6) String mesAno, @NotNull UUID idUsuario, @Nullable Integer idCarteira, @Nullable Integer idCategoria) throws ParseException {
         Date dataInicio = getDataInicioMesAno(mesAno);
         Date dataFim = getDataFimMesAno(mesAno);
         if (idCarteira != null && idCategoria != null) {
-            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCarteiraIdAndCategoriaIdAndValorGreaterThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCarteira, idCategoria, 0.0, pageRequest);
+            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCarteiraIdAndCategoriaIdAndValorGreaterThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCarteira, idCategoria, 0.0);
         }
         if (idCarteira != null) {
-            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCarteiraIdAndValorGreaterThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCarteira, 0.0, pageRequest);
+            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCarteiraIdAndValorGreaterThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCarteira, 0.0);
         }
         if (idCategoria != null) {
-            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCategoriaIdAndValorGreaterThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCategoria, 0.0, pageRequest);
+            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCategoriaIdAndValorGreaterThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCategoria, 0.0);
         }
-        return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndValorGreaterThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, 0.0, pageRequest);
+        return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndValorGreaterThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, 0.0);
     }
 
-    private Page<Transacao> getTransacoesSaida(@NotNull @Length(min = 6, max = 6) String mesAno, @NotNull UUID idUsuario, @NotNull PageRequest pageRequest, @Nullable Integer idCarteira, @Nullable Integer idCategoria) throws ParseException {
+    private List<Transacao> getTransacoesSaida(@NotNull @Length(min = 6, max = 6) String mesAno, @NotNull UUID idUsuario, @Nullable Integer idCarteira, @Nullable Integer idCategoria) throws ParseException {
         Date dataInicio = getDataInicioMesAno(mesAno);
         Date dataFim = getDataFimMesAno(mesAno);
         if (idCarteira != null && idCategoria != null) {
-            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCarteiraIdAndCategoriaIdAndValorLessThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCarteira, idCategoria, 0.0, pageRequest);
+            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCarteiraIdAndCategoriaIdAndValorLessThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCarteira, idCategoria, 0.0);
         }
         if (idCarteira != null) {
-            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCarteiraIdAndValorLessThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCarteira, 0.0, pageRequest);
+            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCarteiraIdAndValorLessThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCarteira, 0.0);
         }
         if (idCategoria != null) {
-            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCategoriaIdAndValorLessThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCategoria, 0.0, pageRequest);
+            return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndCategoriaIdAndValorLessThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, idCategoria, 0.0);
         }
-        return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndValorLessThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, 0.0, pageRequest);
+        return transacaoRepository.findByUsuarioIdAndDataTransacaoBetweenAndValorLessThanOrderByDataTransacaoDesc(idUsuario, dataInicio, dataFim, 0.0);
     }
 
     private Date getDataInicioMesAno(String mesAno) throws ParseException {
